Adding handlebars template and helpers, that encompass all the common gettext features.

--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,9 @@
         <input class="js-message-count" type="text" value="1">
         <h1 class="js-messages"></h1>
 
+        <br><br>
+        <div class="js-template-container"></div>
+
         <script src="js/main.min.js"></script>
     </body>
 </html>
