--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
             <option value="en">English</option>
             <option value="fr">French</option>
             <option value="de">German</option>
+            <option value="pl">Polish</option>
         </select>
 
         <br><br>
