--- a/html/index.html
+++ b/html/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Translations Test</title>
+        <title>Translations Test (Jed.js)</title>
     </head>
     <body>
         <label for="select-language">Select a language:</label>
         <select id="select-language" class="js-select-language">
-            <option value="en">English</option>
+            <option value="en" selected>English</option>
             <option value="fr">French</option>
             <option value="de">German</option>
             <option value="pl">Polish</option>
