Adding context demonstration for both inside JS and Templates.

--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,10 @@
         <br><br>
         <div class="js-template-container"></div>
 
+        <br><br>
+        <button class="js-ok-action"></button>
+        <button class="js-ok-statement"></button>
+
         <script src="js/main.min.js"></script>
     </body>
 </html>
